deploy/k8s/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: changelock-deploy-gate
webhooks:
  - name: pods.changelock.io
    admissionReviewVersions:
      - v1
    sideEffects: None
    failurePolicy: Fail
    matchPolicy: Equivalent
    timeoutSeconds: 5
    namespaceSelector:
      matchLabels:
        changelock.io/enforce: enabled
    clientConfig:
      service:
        namespace: changelock-system
        name: changelock-deploy-gate
        path: /admission/review
        port: 443
      caBundle: __CA_BUNDLE__
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
        scope: Namespaced
